@@ -7,6 +7,7 @@ LIBBSD_0.0 {
     fgetwln;
     fmtcheck;
     heapsort;
+    humanize_number;
     inet_net_pton;
     getprogname; setprogname;
     strlcpy;
